Straightforward fix to accidental mutable vector adding